renamed post route to make it clear which platform is being targeted

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <h2>Add Twitter Account</h2>
 <p>Enter the users Twitter handle below to pull their data from the API</p>
 <br>
-<%= form_tag("/home/addaccount") do %>
+<%= form_tag("/home/addtwitteraccount") do %>
   <%= label_tag(:username, "Add username:") %>
   <%= text_field_tag(:username) %>
   <%= submit_tag("Add") %>
