--- a/app/views/fb_pages/index.html.erb
+++ b/app/views/fb_pages/index.html.erb
@@ -17,6 +17,7 @@
         <td><%= fb_page.page_id %></td>
         <td><%= fb_page.page_name %></td>
         <td><%= link_to 'Show', fb_page %></td>
+        <td><%= link_to 'Snapshot', take_snapshot(fb_page) %></td>
         <td><%= link_to 'Edit', edit_fb_page_path(fb_page) %></td>
         <td><%= link_to 'Destroy', fb_page, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
