disabled feilds meant to be immutable

--- a/app/views/fb_pages/_form.html.erb
+++ b/app/views/fb_pages/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :page_id %><br>
-    <%= f.text_field :page_id %>
+    <%= f.text_field :page_id, :disabled => true %>
   </div>
   <div class="field">
     <%= f.label :page_name %><br>
-    <%= f.text_field :page_name %>
+    <%= f.text_field :page_name, :disabled => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
