--- a/app/views/twitter_accounts/_form.html.erb
+++ b/app/views/twitter_accounts/_form.html.erb
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= f.label :username %><br>
-    <%= f.text_field :username %>
+    <%= f.text_field :username, :disabled => true %>
   </div>
   <div class="field">
     <%= f.label :twitter_id %><br>
-    <%= f.text_field :twitter_id %>
+    <%= f.text_field :twitter_id, :disabled => true %>
   </div>
   <div class="field">
     <%= f.label :display_name %><br>
-    <%= f.text_field :display_name %>
+    <%= f.text_field :display_name, :disabled => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
