--- a/app/views/twitter_accounts/index.html.erb
+++ b/app/views/twitter_accounts/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= twitter_account.twitter_id %></td>
         <td><%= twitter_account.display_name %></td>
         <td><%= link_to 'Show', twitter_account %></td>
-        <td><%= link_to 'Snapshot', take_snapshot(twitter_account) %></td>
+        <td><%= link_to 'Snapshot', take_twitter_snapshot(twitter_account) %></td>
         <td><%= link_to 'Edit', edit_twitter_account_path(twitter_account) %></td>
         <td><%= link_to 'Destroy', twitter_account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
