renamed title of the home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Home</h1>
+<h1>Social</h1>
 <hr>
 <h2>Add Twitter Account</h2>
 <p>Enter the users Twitter handle below to pull their data from the API</p>
