--- a/app/views/twitter_accounts/index.html.erb
+++ b/app/views/twitter_accounts/index.html.erb
@@ -20,6 +20,7 @@
         <td><%= twitter_account.display_name %></td>
         <td><%= link_to 'Show', twitter_account %></td>
         <td><%= link_to 'Snapshot', take_twitter_snapshot(twitter_account) %></td>
+        <td><%= link_to 'Chart', show_twitter_chart(twitter_account) %></td>
         <td><%= link_to 'Edit', edit_twitter_account_path(twitter_account) %></td>
         <td><%= link_to 'Destroy', twitter_account, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
